[package]
name = "onewordbot"
version = "0.1.0"
authors = ["Your Name"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
serenity = { version = "0.11.5", features = ["model", "rustls_backend", "gateway", "http", "client", "chrono"], default-features = false }
sqlite = { version = "0.31.0", features = ["bundled"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
